logs/gslab-tools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GSLab_Tools-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/gencat'...
Listing './lib/python3.5/site-packages/gslab_fill'...
Compiling './lib/python3.5/site-packages/gslab_fill/tablefill.py'...
***   File "./lib/python3.5/site-packages/gslab_fill/tablefill.py", line 323
    print exitmessage
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gslab_fill/textfill.py'...
***   File "./lib/python3.5/site-packages/gslab_fill/textfill.py", line 145
    print exitmessage
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gslab_make'...
Compiling './lib/python3.5/site-packages/gslab_make/dir_mod.py'...
***   File "./lib/python3.5/site-packages/gslab_make/dir_mod.py", line 29
    print "\nDelete files", pathname
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gslab_make/get_externals.py'...
***   File "./lib/python3.5/site-packages/gslab_make/get_externals.py", line 40
    print "Error with get_external: \n", errmsg
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gslab_make/get_externals_github.py'...
***   File "./lib/python3.5/site-packages/gslab_make/get_externals_github.py", line 39
    print "Error with get_externals_github: \n", errmsg
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gslab_make/make_links.py'...
***   File "./lib/python3.5/site-packages/gslab_make/make_links.py", line 299
    print "Error with make_links: \n", errmsg
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gslab_make/make_log.py'...
***   File "./lib/python3.5/site-packages/gslab_make/make_log.py", line 54
    print "Error with set_option: \n", errmsg
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gslab_make/private'...
Compiling './lib/python3.5/site-packages/gslab_make/private/preliminaries.py'...
***   File "./lib/python3.5/site-packages/gslab_make/private/preliminaries.py", line 72
    print '\n'
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gslab_make/private/runprogramdirective.py'...
***   File "./lib/python3.5/site-packages/gslab_make/private/runprogramdirective.py", line 134
    print messages.note_option_replaced % (replace_option, option)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gslab_make/run_program.py'...
***   File "./lib/python3.5/site-packages/gslab_make/run_program.py", line 258
    print line,
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gslab_scons'...
Compiling './lib/python3.5/site-packages/gslab_scons/exceptions.py'...
***   File "./lib/python3.5/site-packages/gslab_scons/exceptions.py", line 4
    print 'Error: ' + message
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
